$Id$
===============================================================

240	Luke Howard <lukeh@padl.com>

	* new API for resolving automounts (requires custom
	  autofs plugin for Linux at present):
	  _nss_ldap_setautomntent(), _nss_ldap_getautomntend(),
	  _nss_ldap_endautomntent(), _nss_ldap_getautomntbyname_r()

239	Luke Howard <lukeh@padl.com>

	* support for initgroups using backlinks (selectable
	  at runtime if RFC2307bis support is enabled, using
	  the nss_initgroups backlink configuration directive)
	* support for dynamically expanding filter sizes
	* from Peter Marschall <peter@adpm.de>:
	  revert the deletion of blanks/tabs in ldap.conf that
	  happened between 235 and 238
	* from Peter Marschall <peter@adpm.de>:
	  This patch changes configure.in and Makefile.am so that
	  ldap.conf gets installed in the place and with the name
	  that is given to the configure option --with-ldap-conf-file.
	  In addition to that it fixes a long standing bug in
	  Makefile.am that tries to install a file before the
	  destination directory is guaranteed to be created (hunk #3),
	  and uses $(mkinstalldirs) for AIX (hunk #2).

238	Luke Howard <lukeh@padl.com>

	* more manual page updates

237	Luke Howard <lukeh@padl.com>

	* more manual page updates

236	Luke Howard <lukeh@padl.com>

	* fix for BUG#201: typo in ldap-schema.c causing build
	  to fail
	* add manual page for nss_ldap

235	Luke Howard <lukeh@padl.com>

	* fix for BUG#198: make pagesize configurable
	* fix for BUG#199: correct fix for BUG#138
	  (blind last char remove in ldap.secret)

234	Luke Howard <lukeh@padl.com>

	* don't reacquire global lock in do_next_page()
	* restore old "bind_policy hard" behaviour (don't try to
	  reconnect if initialization failed). The behaviour
	  introduced in nss_ldap-227 can be enabled with
	  "bind_policy hard_init".

233	Luke Howard <lukeh@padl.com>

	* if do_open() returns NSS_UNAVAIL, don't try to do
	  server reconnect; only do it if NSS_TRYAGAIN is returned